# simple-config

./: .gitignore  README.md  simple-config.cabal  stack.yaml
src/Configuration/: SimpleConfig.hs
src/Configuration/SimpleConfig/: Compiled.hs  Read.hs
src/Configuration/SimpleConfig/Compiled/: Fallback.hs
