name:                simple-config
version:             0.1.0.0
synopsis:            Load compile- and runtime configuration
homepage:            https://github.com/CthulhuDen/simple-config#readme
license:             BSD3
license-file:        LICENSE
author:              Cthulhu
maintainer:          cthulhu.den@gmail.com
copyright:           2017 Cthulhu
category:            General
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  exposed-modules:     Configuration.SimpleConfig
                       Configuration.SimpleConfig.Compiled
  other-modules:       Configuration.SimpleConfig.Read
                       Configuration.SimpleConfig.Compiled.Fallback
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       NoImplicitPrelude
  build-depends:       base >= 4.7 && < 5
                     , classy-prelude
                     , aeson
                     , yaml
                     , template-haskell
